modified register.html to remove service error

--- a/votingApp/templates/votingApp/register.html
+++ b/votingApp/templates/votingApp/register.html
@@ -1,5 +1,4 @@
-{% extends 'votingApp/base.html' %} {% block title %}Register - e-Chayan{%
-endblock %} {% block content %}
+{% extends 'votingApp/base.html' %} {% block title %}Register - e-Chayan{% endblock %} {% block content %}
 <div class="form-card">
   <h1>Create Voter Account</h1>
 
