--- a/votingApp/templates/votingApp/login.html
+++ b/votingApp/templates/votingApp/login.html
@@ -40,7 +40,7 @@
   <div class="auth-link">
     <p>
       Don't have an account? <a href="{% url 'register' %}">Register here</a>
-      <p>Want to run for office? <a href="{% url 'candidate_register' %}">Register as Candidate</a></p>
+      <p>Want to login as Candidate? <a href="{% url 'candidate_register' %}">Login as Candidate</a></p>
     </p>
     <p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
   </div>
