added candidate dashboard page

--- a/votingApp/templates/votingApp/home.html
+++ b/votingApp/templates/votingApp/home.html
@@ -20,7 +20,7 @@
     <h2 style="font-weight: 600;">Live Voter Turnout</h2>
 <h1 style="font-size: 4em; color: var(--primary-color);">{{ turnout_percentage }}%</h1>
 
-<div class="progress" style="height: 25px;">
+<div class="progress" style="height: 25px;max-width: 60%; margin: 20px auto; border-radius: 15px;">
   <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" 
        role="progressbar" 
        style="width: {{ turnout_percentage }}%" 
